test/Parser/Class/MethodDeclInClassDef.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: unexpected method declaration; was expecting method definition
	void method();
}

// CHECK: 1 error generated.
